--- a/index.html
+++ b/index.html
@@ -3,26 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello World</title>
+    <title>Responsive Image Page</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            text-align: center;
-            margin-top: 20%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            margin: 0;
             background-color: #f4f4f9;
-            color: #333;
         }
-        h1 {
-            font-size: 2.5em;
-            color: #0078d7;
-        }
-        p {
-            font-size: 1.2em;
+        img {
+            max-width: 90%;
+            height: auto;
+            border: 2px solid #ccc;
+            border-radius: 8px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
     </style>
 </head>
 <body>
-    <h1>Hello, World!</h1>
-    <p>Welcome to your first HTML page.</p>
+    <img src="logo.png" alt="Agencia Treize - Logo">
 </body>
 </html>
