--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 
 		<!-- Header -->
 			<header id="header">
-				<h1>Logo</h1>
+				<h1>
+					<img src="images/fulls/logo.png" alt="Logo Treize" style="height: 60px;">
+				</h1>
 				<nav>
 					<ul>
 						<li><a href="#intro">servicios</a></li>
@@ -27,7 +29,7 @@
 					<header>
 						<h2>Si la vida te da limones haz limonada<span class="green">.</span></h2>
 					</header>
-					<p>Y nosotros te hacemos el marketing</p>
+					<p><span class="green"></span>Y nosotros te hacemos el marketing</span></p>
 					<footer>
 						<a href="#one" class="button style2 down">baja aqui</a>
 					</footer>
