Changed header background color

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<body class="is-preload">
 
 		<!-- Header -->
-			<header id="header">
+			<header id="header" style="background-color: #fef7ed;">
 				<h1>
 					<img src="images/fulls/logo.png" alt="Logo Treize" style="height: 60px;">
 				</h1>
