--- a/index.html
+++ b/index.html
@@ -37,14 +37,25 @@
 			</section>
 
 		<!-- One -->
-<section id="one" class="main style1 dark fullscreen">
-				<div class="content">
-					<header>
-						<h2>Conecta. Impacta. Crece.</h2>
-					</header>
-					<p>Y nosotros te hacemos el marketing.</p>
+		<section id="one" class="main style1 dark fullscreen" style="background-color: #8cc63f;">
+			<div class="content">
+				<header>
+					<h2>Conecta. Impacta. Crece.</h2>
+				</header>
+		
+				<!-- Bloques de texto lado a lado -->
+				<div style="display: flex; gap: 20px; justify-content: center; flex-wrap: wrap; margin-top: 20px;">
+					<div style="background-color: white; color: #333; padding: 20px; border-radius: 10px; width: 250px; text-align: center; box-shadow: 0 2px 6px rgba(0,0,0,0.1);">
+						GESTION DE REDES SOCIALES
+					</div>
+					<div style="background-color: white; color: #333; padding: 20px; border-radius: 10px; width: 250px; text-align: center; box-shadow: 0 2px 6px rgba(0,0,0,0.1);">
+						CREACION DE CONTENIDO
+					</div>
 				</div>
-			</section>
+		
+				<p style="margin-top: 40px;">Y nosotros te hacemos el marketing.</p>
+			</div>
+		</section>		
 
 		<!-- Two -->
 			<section id="two" class="main style2 left dark fullscreen">
